--- a/index.html
+++ b/index.html
@@ -240,7 +240,20 @@ h2 {
         </div>
         <div class="input-group">
             <label for="componentCode">Código do Componente:</label>
-            <input type="text" id="componentCode" required>
+            <select id="componentCode" required>
+                <option value="">Selecione</option>
+                <option value="5 - Topo">Topo</option>
+                <option value="3 - Saia">Saia</option>
+                <option value="6 Válvula Enchimento">Válvula Enchimento</option>
+                <option value="7 - Válvula Descarga">Válvula Descarga</option>
+                <option value="2 - Flap">Flap</option>
+                <option value="108 - Tecido Rafia">Tecido Rafia</option>
+                <option value="198 - Etiqueta Regata">Etiqueta Regata</option>
+                <option value="102 - Reforço Porta Documento">Reforço Porta Documento</option>
+                <option value="22 - Reforço Alça">Reforço Alça</option>
+                <option value="104 - Válvula Afunilada">Válvula Afunilada</option>
+                <option value="172 - Flap de Topo">Flap de Topo</option>
+            </select>
         </div>
         <div class="input-group">
             <label for="opQuantity">Quantidade da OP:</label>
