--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@ h2 {
             <select id="componentCode" required>
                 <option value="">Selecione</option>
                 <option value="5 - Topo">Topo</option>
-                <option value="3 - Saia">Saia</option>
+                <option value="3 - Saia">3Saia</option>
                 <option value="6 Válvula Enchimento">Válvula Enchimento</option>
                 <option value="7 - Válvula Descarga">Válvula Descarga</option>
                 <option value="2 - Flap">Flap</option>
@@ -277,7 +277,7 @@ h2 {
             <label for="opWeight">Gramatura da OP:</label>
             <input type="number" id="opWeight" min="0" required>
         </div>
-     </div>
+
         <button type="button" class="calc-btn" onclick="calculateAndSave()">Calcular e Salvar</button>
     </form>
 
