--- a/index.html
+++ b/index.html
@@ -242,17 +242,17 @@ h2 {
             <label for="componentCode">Código do Componente:</label>
             <select id="componentCode" required>
                 <option value="">Selecione</option>
-                <option value="5 - Topo">Topo</option>
-                <option value="3 - Saia">3Saia</option>
-                <option value="6 Válvula Enchimento">Válvula Enchimento</option>
-                <option value="7 - Válvula Descarga">Válvula Descarga</option>
-                <option value="2 - Flap">Flap</option>
-                <option value="108 - Tecido Rafia">Tecido Rafia</option>
-                <option value="198 - Etiqueta Regata">Etiqueta Regata</option>
-                <option value="102 - Reforço Porta Documento">Reforço Porta Documento</option>
-                <option value="22 - Reforço Alça">Reforço Alça</option>
-                <option value="104 - Válvula Afunilada">Válvula Afunilada</option>
-                <option value="172 - Flap de Topo">Flap de Topo</option>
+                <option value="5 - Topo">5 - Topo</option>
+                <option value="3 - Saia">3 - Saia</option>
+                <option value="6 - Válvula Enchimento">6 - Válvula Enchimento</option>
+                <option value="7 - Válvula Descarga">7 - Válvula Descarga</option>
+                <option value="2 - Flap">2 - Flap</option>
+                <option value="108 - Tecido Rafia">108 - Tecido Rafia</option>
+                <option value="198 - Etiqueta Regata">198 - Etiqueta Regata</option>
+                <option value="102 - Reforço Porta Documento">102 - Reforço Porta Documento</option>
+                <option value="22 - Reforço Alça">22 - Reforço Alça</option>
+                <option value="104 - Válvula Afunilada">104 - Válvula Afunilada</option>
+                <option value="172 - Flap de Topo">172 - Flap de Topo</option>
             </select>
         </div>
         <div class="input-group">
