--- a/index.html
+++ b/index.html
@@ -520,8 +520,8 @@ function calculateAndSave() {
     updateTable();
     saveTableToLocalStorage();
 
-// Limpa todos os campos e recarrega a página
-    location.reload();
+    // Limpa todos os campos e resultados, mas mantém a página sem recarregar
+    resetPage();
 
 
 }
