--- a/index.html
+++ b/index.html
@@ -436,6 +436,17 @@ function isCombinationRepeated(opNumber, componentCode) {
 }
 
 
+// Função para limpar os campos de entrada sem afetar os cálculos
+function resetInputFields() {
+    // Limpa os campos de entrada
+    document.getElementById('opNumber').value = '';
+    document.getElementById('componentCode').value = '';
+    document.getElementById('opQuantity').value = '';
+    document.getElementById('opLength').value = '';
+    document.getElementById('fabricType').value = '';
+    document.getElementById('opWeight').value = '';
+}
+
     
 // Calcula e salva os dados
 function calculateAndSave() {
@@ -521,18 +532,8 @@ function calculateAndSave() {
     saveTableToLocalStorage();
 
 
-    // Função para limpar os campos e resultados sem recarregar a página
-function resetPage() {
-    // Limpa os campos de entrada
-    document.getElementById('opNumber').value = '';
-    document.getElementById('componentCode').value = '';
-    document.getElementById('opQuantity').value = '';
-    document.getElementById('opLength').value = '';
-    document.getElementById('fabricType').value = '';
-    document.getElementById('opWeight').value = '';
-
-    // Limpa todos os campos e resultados, mas mantém a página sem recarregar
-    resetPage();
+      // Limpa apenas os campos de entrada
+    resetInputFields();
 
 
 }
