--- a/index.html
+++ b/index.html
@@ -445,6 +445,15 @@ function resetInputFields() {
     document.getElementById('opLength').value = '';
     document.getElementById('fabricType').value = '';
     document.getElementById('opWeight').value = '';
+
+        // Desabilita os campos de entrada
+    document.getElementById('opNumber').disabled = true;
+    document.getElementById('componentCode').disabled = true;
+    document.getElementById('opQuantity').disabled = true;
+    document.getElementById('opLength').disabled = true;
+    document.getElementById('fabricType').disabled = true;
+    document.getElementById('opWeight').disabled = true;
+
 }
 
     
