--- a/index.html
+++ b/index.html
@@ -454,6 +454,8 @@ function resetInputFields() {
     document.getElementById('fabricType').disabled = true;
     document.getElementById('opWeight').disabled = true;
 
+     // Reseta o botão de seleção da máquina
+    document.getElementById('machineSelect').selectedIndex = 0; // Define para a opção padrão
 }
 
     
