--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@ function resetInputFields() {
     document.getElementById('opWeight').disabled = true;
 
      // Reseta o botão de seleção da máquina
-    document.getElementById('machineSelect').selectedIndex = 0; // Define para a opção padrão
+    document.getElementById('machine-buttons').selectedIndex = 0; // Define para a opção padrão
 }
 
     
