--- a/index.html
+++ b/index.html
@@ -455,9 +455,9 @@ function resetInputFields() {
     document.getElementById('opWeight').disabled = true;
 
     // Reseta a seleção da máquina e altera a cor do botão de volta para verde
-    const machineSelect = document.getElementById('machineSelect');
-    machineSelect.selectedIndex = 0; // Volta ao primeiro item da lista (assumindo que o primeiro é "Selecione")
-    machineSelect.style.backgroundColor = 'green'; // Altera a cor de volta para verde
+    const machineNumber = document.getElementById('machineNumber');
+    machineNumber.selectedIndex = 0; // Volta ao primeiro item da lista (assumindo que o primeiro é "Selecione")
+    machineNumber.style.backgroundColor = 'green'; // Altera a cor de volta para verde
 }
 
     
