--- a/index.html
+++ b/index.html
@@ -454,8 +454,8 @@ function resetInputFields() {
     document.getElementById('fabricType').disabled = true;
     document.getElementById('opWeight').disabled = true;
 
-    // Reseta a seleção da máquina e altera a cor do botão de volta para verde
-    const machineButtons = document.getElementById('machineButtons');
+// Reseta a seleção da máquina e muda o estado do botão
+    const machineSelect = document.getElementById('machineSelect');
 
 }
 
