--- a/index.html
+++ b/index.html
@@ -284,7 +284,7 @@ h2 {
    <h2>Resultados:</h2>
 
 <div class="results-container">
-        <div class="result-block color2"onclick="showPopup('Tamanho ao qual deve-se ajustar o carrossel para não sobrar muito material após cortado, este ajuste é feito no carrossel trocando os pinos de lugar. Recurso importante para não gerar resíduo.')">
+        <div class="result-block color2"onclick="showPopup('Tamanho ao qual deve ser ajustado o carrossel para não sobrar muito material após cortado, este ajuste é feito no carrossel trocando os pinos de lugar. Recurso importante para não gerar resíduo.')">
         <p id="carouselSizeResult">Tamanho do carrossel: </p>
     </div>
     <div class="result-block color1"onclick="showPopup('É o número de vezes ao qual você irá cortar o tecido na mesa.')">
