--- a/index.html
+++ b/index.html
@@ -253,6 +253,7 @@ h2 {
                 <option value="22 - Reforço Alça">22 - Reforço Alça</option>
                 <option value="104 - Válvula Afunilada">104 - Válvula Afunilada</option>
                 <option value="172 - Flap de Topo">172 - Flap de Topo</option>
+                <option value="Liner">Liner</option>
             </select>
         </div>
         <div class="input-group">
