--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ h2 {
                 <option value="Tubular">Tubular</option>
                 <option value="PATCH">PATCH</option>
                 <option value="Saia">Saia</option>
-                <option value="HB">Saia</option>
+                <option value="HB">HB</option>
             </select>
         </div>
         <div class="input-group">
